update dockerfile with other file paths

--- a/xjbr/Dockerfile
+++ b/xjbr/Dockerfile
@@ -10,16 +10,8 @@ RUN conda install --quiet -y numpy pandas && \
 
 RUN mkdir /home/jovyan/data && \
     cd /home/jovyan/data && \
-    wget https://bit.ly/c1_xenopus_s10 -O s10.zip && \
-    unzip s10.zip && \
-    wget https://bit.ly/c1_xenopus_s11 -O s11.zip && \
-    unzip s11.zip && \
-    wget https://bit.ly/c1_xenopus_s12 -O s12.zip && \
-    unzip s12.zip && \
-    wget https://bit.ly/c1_xenopus_s14 -O s14.zip && \
-    unzip s14.zip && \
-    wget https://bit.ly/c1_xenopus_s20 -O s20.zip && \
-    unzip s20.zip && \
+    wget http://erg.biophys.msu.ru/~comcon1/s10-to-22.zip -O alls.zip && \
+    unzip alls.zip && \
     rm -f *.zip
 
 VOLUME ["/home/$NB_USER/.jupyter"]
